# eclass-record

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
packaging/: PKGBUILD
src/: App.tsx  theme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: commands.rs  compute.rs  db.rs  export.rs  main.rs  models.rs
src/components/: AssessmentModal.tsx  ClassFormModal.tsx  StudentModal.tsx
src/lib/: api.ts
src/pages/: Archive.tsx  ClassRecordList.tsx  Dashboard.tsx  Gradebook.tsx  Settings.tsx
